--- a/.github/workflows/test-python-publish.yml
+++ b/.github/workflows/test-python-publish.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build package
       run: python setup.py sdict bdist_wheel
       env:
-        version: ${GITHUB_REF#refs/*/}
+        package_version: ${GITHUB_REF#refs/*/}
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
