--- a/.github/workflows/test-python-publish.yml
+++ b/.github/workflows/test-python-publish.yml
@@ -8,7 +8,7 @@ on:
       reason:
         required: false
         default: 'Testing publishing'
-
+        
 jobs:
   build-release:
     runs-on: ubuntu-latest
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools twine
+        pip install build
     - name: Build package
-      run: python setup.py sdict bdist_wheel
+      run: python -m build
       env:
         package_version: ${GITHUB_REF#refs/*/}
     - name: Publish package
