--- a/.github/workflows/test-python-publish.yml
+++ b/.github/workflows/test-python-publish.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build package
       run: python -m build
       env:
-        package_version: ${{ format('v{0}-beta', github.sha) }}
+        package_version: 'v0.1.0-beta'
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
