--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,12 +11,10 @@ name: Upload Python Package
 on:
   release:
     types: [published]
-
+    
 jobs:
-  deploy:
-
+  build-release:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -29,6 +27,8 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
+      env:
+        package_version: ${{ github.ref_name }}
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
